[build-system]
requires = [
    "chardet",
    "packaging",
    "pipreqs",
    "rich",
    "setuptools >= 77.0.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "tretool"
version = "0.3.0"
authors = [
  { name="Jemy", email="sh_ljr_2013@163.com" },
]
description = "一个有着许多功能的Python工具库"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tool", "tools", "utility", "utilities", "productivity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jemy/sampleproject"
Issues = "https://github.com/jemy/sampleproject/issues"
